hphp/hack/test/typecheck/open_shape_optional_required_reason2.php.exp
File "open_shape_optional_required_reason2.php", line 10, characters 26-29:
Some type arguments violate their constraints (Typing[4323])
  File "open_shape_optional_required_reason2.php", line 8, characters 22-31:
  The field `field` is **optional**
  File "open_shape_optional_required_reason2.php", line 10, characters 28-28:
  The field `field` is defined as **required**
  File "open_shape_optional_required_reason2.php", line 4, characters 14-19:
  `field` is defined here
