hphp/hack/test/typecheck/open_shape_optional_required_reason2.php
<?hh

type S = shape(
  'field' => string,
  ...
);

interface I<+T super shape(...)> {}

final class C implements I<S> {}
